Changed website name

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
                                         <li>L23, Arihant Apartments, Thoraipakam, Chennai - 600096.</li>
                                         <li>+919994298575</li>
                                         <li>holly.karthi@gmail.com</li>
-                                        <li>www.karthikeyanGovindarajan.com</li>
+                                        <li>www.karthirocker.github.io</li>
                                     </ul>
                                 </div>
                                 <!-- //.col-md-5 -->
