First commit from VS

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang="en"> <![endif]-->
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     
     <!-- Site Title -->
-    <title>Resume - Karthikeyan Govindarajan</title>
+    <title>My Template - Karthikeyan Govindarajan</title>
     
     <meta name="description" content="Karthikeyan's Resume">
     <meta name="keywords" content="hollykarthi, resume">
