--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     
     <!-- Site Title -->
-    <title>My Template - Karthikeyan Govindarajan</title>
+    <title>Karthikeyan Govindarajan</title>
     
     <meta name="description" content="Karthikeyan's Resume">
     <meta name="keywords" content="hollykarthi, resume">
