--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         Creative | .Net Developer
                     </span>
                 </h1>                
-                <p>25 years young and tech guy.</p>
+                <p><b class="age">25</b> years young and tech guy.</p>
                 
                 <div class="page-scroll">
                     <a href="#profile" class="btn btn-lg btn-custom">
