--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         Creative | .Net Developer
                     </span>
                 </h1>                
-                <p><b class="age">25</b> years young and tech guy.</p>
+                <p><span class="age"></span> years young and tech guy.</p>
                 
                 <div class="page-scroll">
                     <a href="#profile" class="btn btn-lg btn-custom">
@@ -155,7 +155,7 @@
                                     <h2 class="section-title uppercase">Hello, My Name is Karthikeyan.</h2>
 
                                     <p>
-                                        Karthikeyan Govindarajan, 26 years young, born 
+                                        Karthikeyan Govindarajan, <span class="age"></span> years young, born 
 and grew up in Coimbatore, Tamil Nadu, India. Highly motivated creative 
 developer with international client portfolio.
                                     </p>
